style add users forms

--- a/public/css/home/home.css
+++ b/public/css/home/home.css
@@ -21,6 +21,7 @@
   justify-items: center;
   align-items: start;
   justify-content: center;
+  margin: 0 10px;
 }
 .box-controllers {
   background-color: transparent;
