--- a/views/admin/add-user.ejs
+++ b/views/admin/add-user.ejs
@@ -6,13 +6,13 @@
     <div class="wrapper-forms">
         <form action="/add-users" method="POST" class="form-add-user">
             <div class="form_controls " >
-                <input type="text" placeholder="Type Name...">
+                <input type="text" placeholder="Type Name..." name="name">
             </div>
             <div class="form_controls " >
-                <input type="email" placeholder="Type email">
+                <input type="email" placeholder="Type email" name="email">
             </div>
             <div class="form_controls comments" >
-                <textarea name="" id="" cols="30" rows="10" placeholder="type comments..."></textarea>
+                <textarea name="comments" id="" cols="30" rows="10" placeholder="type comments..."></textarea>
             </div>
             <div class="form_controls button" >
                 <button type="submit">Add Users</button>
