--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -10,14 +10,14 @@
               <li class="navigation__lists">
                 <a
                   href="/add-users"
-                  class="navigation__link <%= path === '/products'? 'active':'' %>"
+                  class="navigation__link <%= path === '/add-users'? 'active':'' %>"
                   >add users</a
                 >
               </li>
               <li class="navigation__lists">
                 <a
                   href="/admin/dashboard"
-                  class="navigation__link <%= path === '/admin/prodicts'? 'active':'' %>"
+                  class="navigation__link <%= path === '/admin/users'? 'active':'' %>"
                   >dashboard</a
                 >
               </li>
