--- a/public/css/admin/dashboard.css
+++ b/public/css/admin/dashboard.css
@@ -1,53 +1,66 @@
 .main {
-    width: 100%;
-  }
-  .wrapper-users {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+}
+.wrapper-users {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.box_users {
+  width: 150px;
+  min-height: 200px;
+  height: auto;
+  padding: 8px;
+  background-color: #092635;
+  border-radius: 12px;
+  box-shadow: 4px -5px 0px 1px rgb(74 127 215 / 50%);
+  display: grid;
+  grid-template-rows: 10% 20% 70%;
+  justify-items: center;
+  align-items: start;
+  justify-content: center;
+  margin: 0 10px;
+}
+.box-controllers {
+  background-color: transparent;
+  width: 100%;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 16px;
+}
+.name {
+  text-transform: uppercase;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: #435b66;
+}
+.email {
+  color: #526d82;
+}
+.comment {
+  text-align: left;
+  color: #cbe4de;
+  font-size: 14px;
+  padding-bottom: 10px;
+}
+.message {
+  font-size: 200px;
+  color: white;
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+.buttons{
     display: flex;
     justify-content: center;
-    align-items: center;
-  }
-  .box_users {
-    width: 150px;
-    min-height: 200px;
-    height: auto;
-    padding: 8px;
-    background-color: #092635;
+}
+.btn{
+    padding: 4px 8px ;
     border-radius: 12px;
-    box-shadow: 4px -5px 0px 1px rgb(74 127 215 / 50%);
-    display: grid;
-    grid-template-rows: 10% 20% 70%;
-    justify-items: center;
-    align-items: start;
-    justify-content: center;
-    margin: 0 10px;
-  }
-  .box-controllers {
-    background-color: transparent;
-    width: 100%;
-    text-align: center;
-    font-family: sans-serif;
-    font-size: 16px;
-  }
-  .name {
-    text-transform: uppercase;
-    font-family: Georgia, "Times New Roman", Times, serif;
-    color: #435b66;
-  }
-  .email {
-    color: #526d82;
-  }
-  .comment {
-    text-align: left;
-    color: #cbe4de;
-    font-size: 14px;
-    padding-bottom: 10px;
-  }
-  .message{
-      font-size: 200px;
-      color: white;
-      text-align: center;
-      font-family: sans-serif;
-      font-weight: bold;
-  }
+    background-color: #526d82;
+    cursor: pointer;
+}
+.btn:hover{
+    background-color: #5e84a1;
+}
