Fix typos in user email and comment fields in the admin controller and home view.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
                     <h4> <%= user.email %> </h4>
                 </div>
                 <div class="box-controllers comment">
-                    <p> <%= user.comment %> </p>
+                    <p> <%= user.comments %> </p>
                 </div>
             </div>
             <% } %>
